添加俱乐部冠名、俱乐部资料、添加运动页的表单验证

--- a/俱乐部冠名.html
+++ b/俱乐部冠名.html
@@ -61,18 +61,20 @@
                         <span class="club-t-wave"></span>
                     </div>
                     <div class="club-t-items">
-                        <form action="">
+                        <form action="" class="club-t-form">
                             <div class="club-t-items-list clearfix">
                                 <span class="club-t-items-txt fl">冠名商名称</span>
                                 <div class="club-t-items-para fl">
-                                    <input type="text" class="club-t-items-input" name=""/>
+                                    <input type="text" class="club-t-items-input club-t-name-title" name=""/>
                                 </div>
+                                <span class="club-error"></span>
                             </div>
                             <div class="club-t-items-list clearfix">
                                 <span class="club-t-items-txt fl">代表队名称</span>
                                 <div class="club-t-items-para fl">
-                                    <input type="text" class="club-t-items-input" name=""/>
+                                    <input type="text" class="club-t-items-input club-t-name-pro" name=""/>
                                 </div>
+                                <span class="club-error"></span>
                             </div>
                             <p class="club-t-tip">本赛季内的冠名商名称和代表队名称一旦生效无法更改，请确认后提交</p>
                             <input type="submit" class="club-t-submit" value="提交"/>
@@ -89,3 +91,4 @@
 </div>
 </body>
 </html>
+<script src="js/top.js"></script>
