--- a/俱乐部资料.html
+++ b/俱乐部资料.html
@@ -61,42 +61,48 @@
                         <span class="club-t-wave"></span>
                     </div>
                     <div class="club-t-items">
-                        <form action="">
+                        <form action="" class="club-d-form">
                             <div class="club-t-items-list clearfix">
                                 <span class="club-t-items-txt fl"><i>*</i>名称</span>
                                 <div class="club-t-items-para fl">
-                                    <input type="text" class="club-t-items-input" name="" value="江西应用技术职业学院青少年攀岩俱乐部"/>
+                                    <input type="text" class="club-t-items-input club-d-name" name="" value="江西应用技术职业学院青少年攀岩俱乐部"/>
                                 </div>
+                                <span class="club-error"></span>
                             </div>
                             <div class="club-t-items-list clearfix">
                                 <span class="club-t-items-txt fl"><i></i>缩写</span>
                                 <div class="club-t-items-para fl">
                                     <input type="text" class="club-t-items-input" name="" value=""/>
                                 </div>
+                                <span class="club-error"></span>
                             </div>
                             <div class="club-t-items-list clearfix">
                                 <span class="club-t-items-txt fl"><i>*</i>法人</span>
                                 <div class="club-t-items-para fl">
-                                    <input type="text" class="club-t-items-input" name="" value=""/>
+                                    <input type="text" class="club-t-items-input club-d-per" name="" value=""/>
                                 </div>
+                                <span class="club-error"></span>
                             </div>
                             <div class="club-t-items-list clearfix">
                                 <span class="club-t-items-txt fl"><i>*</i>联系人</span>
                                 <div class="club-t-items-para fl">
-                                    <input type="text" class="club-t-items-input" name="" value="aaa"/>
+                                    <input type="text" class="club-t-items-input club-d-relate" name="" value="aaa"/>
                                 </div>
+                                <span class="club-error"></span>
                             </div>
                             <div class="club-t-items-list clearfix">
                                 <span class="club-t-items-txt fl"><i></i>邮箱</span>
                                 <div class="club-t-items-para fl">
                                     <input type="text" class="club-t-items-input" name="" value="shangxin1224@126.com"/>
                                 </div>
+                                <span class="club-error"></span>
                             </div>
                             <div class="club-t-items-list clearfix">
                                 <span class="club-t-items-txt fl"><i>*</i>电话</span>
                                 <div class="club-t-items-para fl">
-                                    <input type="text" class="club-t-items-input" name="" value=""/>
+                                    <input type="text" class="club-t-items-input club-d-phone" name="" value=""/>
                                 </div>
+                                <span class="club-error"></span>
                             </div>
                             <div class="club-t-items-list clearfix">
                                 <span class="club-t-items-txt fl"><i></i>传真</span>
@@ -109,12 +115,14 @@
                                 <div class="club-t-items-para fl">
                                     <input type="text" class="club-t-items-input" name="" value=""/>
                                 </div>
+                                <span class="club-error"></span>
                             </div>
                             <div class="club-t-items-list clearfix">
                                 <span class="club-t-items-txt fl"><i></i>邮编</span>
                                 <div class="club-t-items-para fl">
                                     <input type="text" class="club-t-items-input" name="" value=""/>
                                 </div>
+                                <span class="club-error"></span>
                             </div>
                             <input type="submit" class="club-t-submit" value="更新"/>
                         </form>
@@ -130,3 +138,4 @@
 </div>
 </body>
 </html>
+<script src="js/top.js"></script>
