添加参赛报名和取消报名两个页，及修改后台管理页的最小宽度

--- a/俱乐部冠名.html
+++ b/俱乐部冠名.html
@@ -42,7 +42,7 @@
 </div>
 
 <!--主要内容区域-->
-<div class="indexMain-wrap">
+<div class="indexMain-wrap reg-g">
     <div class="container">
         <div class="clearfix club-t-con">
             <div class="club-t-l fl">
@@ -54,7 +54,7 @@
                     <dd class="club-t-list4 active"><a href="javascript:;"><i class="club-t-icon"></i><em>俱乐部冠名</em></a></dd>
                 </dl>
             </div>
-            <div class="club-t-r fr">
+            <div class="club-t-r club-g-r fr">
                 <div class="club-t-dels">
                     <div class="club-t-head">
                         <i></i><span class="club-t-head-txt">俱乐部冠名</span>
