--- a/俱乐部资料.html
+++ b/俱乐部资料.html
@@ -42,7 +42,7 @@
 </div>
 
 <!--主要内容区域-->
-<div class="indexMain-wrap">
+<div class="indexMain-wrap reg-d">
     <div class="container">
         <div class="clearfix club-t-con club-d-con">
             <div class="club-t-l fl">
