--- a/添加运动员.html
+++ b/添加运动员.html
@@ -42,7 +42,7 @@
 </div>
 
 <!--主要内容区域-->
-<div class="indexMain-wrap">
+<div class="indexMain-wrap reg-a">
     <div class="container">
         <div class="clearfix club-t-con club-d-con">
             <div class="club-t-l fl">
@@ -88,7 +88,7 @@
                             <div class="club-t-items-list clearfix">
                                 <span class="club-t-items-txt fl"><i>*</i>身份类型</span>
                                 <div class="club-t-items-para fl">
-                                    <div class="club-a-select">
+                                    <div class="club-a-select j-a-select">
                                         <span class="club-a-selected"><em>请选择</em><i></i></span>
                                         <div class="club-a-select-item" >
                                             <ul class="club-a-select-list">
