--- a/赛事回顾.html
+++ b/赛事回顾.html
@@ -60,144 +60,176 @@
             <ul class="back-dels clearfix j-back">
                 <li class="col-xs-12 col-sm-6 col-md-3">
                     <a href="javascript:;">
-                        <img src="img/back-pic.jpg" class="back-pic" alt=""/>
+                        <div class="back-pic">
+                            <video src="movie.ogg" width="100%" height="100%" controls preload></video>
+                        </div>
                         <p class="back-title"><span>2016 全国攀岩分站赛（第一站）- 广西.乐业（L,B,S）</span></p>
-                        <p class="back-date">42:25</p>
+                        <p class="back-date none">42:25</p>
                         <span class="back-arrow"></span>
                         <span class="back-yellow"></span>
                     </a>
                 </li>
                 <li class="col-xs-12 col-sm-6 col-md-3">
                     <a href="javascript:;">
-                        <img src="img/back-pic.jpg" class="back-pic" alt=""/>
+                        <div class="back-pic">
+                            <video src="movie.ogg" width="100%" height="100%" controls preload></video>
+                        </div>
                         <p class="back-title"><span>2016 全国攀岩分站赛（第一站）- 广西.乐业（L,B,S）</span></p>
-                        <p class="back-date">42:25</p>
+                        <p class="back-date none">42:25</p>
                         <span class="back-arrow"></span>
                         <span class="back-yellow"></span>
                     </a>
                 </li>
                 <li class="col-xs-12 col-sm-6 col-md-3">
                     <a href="javascript:;">
-                        <img src="img/back-pic.jpg" class="back-pic" alt=""/>
+                        <div class="back-pic">
+                            <video src="movie.ogg" width="100%" height="100%" controls preload></video>
+                        </div>
                         <p class="back-title"><span>2016 全国攀岩分站赛（第一站）- 广西.乐业（L,B,S）</span></p>
-                        <p class="back-date">42:25</p>
+                        <p class="back-date none">42:25</p>
                         <span class="back-arrow"></span>
                         <span class="back-yellow"></span>
                     </a>
                 </li>
                 <li class="col-xs-12 col-sm-6 col-md-3">
                     <a href="javascript:;">
-                        <img src="img/back-pic.jpg" class="back-pic" alt=""/>
+                        <div class="back-pic">
+                            <video src="movie.ogg" width="100%" height="100%" controls preload></video>
+                        </div>
                         <p class="back-title"><span>2016 全国攀岩分站赛（第一站）- 广西.乐业（L,B,S）</span></p>
-                        <p class="back-date">42:25</p>
+                        <p class="back-date none">42:25</p>
                         <span class="back-arrow"></span>
                         <span class="back-yellow"></span>
                     </a>
                 </li>
                 <li class="col-xs-12 col-sm-6 col-md-3">
                     <a href="javascript:;">
-                        <img src="img/back-pic.jpg" class="back-pic" alt=""/>
+                        <div class="back-pic">
+                            <video src="movie.ogg" width="100%" height="100%" controls preload></video>
+                        </div>
                         <p class="back-title"><span>2016 全国攀岩分站赛（第一站）- 广西.乐业（L,B,S）</span></p>
-                        <p class="back-date">42:25</p>
+                        <p class="back-date none">42:25</p>
                         <span class="back-arrow"></span>
                         <span class="back-yellow"></span>
                     </a>
                 </li>
                 <li class="col-xs-12 col-sm-6 col-md-3">
                     <a href="javascript:;">
-                        <img src="img/back-pic.jpg" class="back-pic" alt=""/>
+                        <div class="back-pic">
+                            <video src="movie.ogg" width="100%" height="100%" controls preload></video>
+                        </div>
                         <p class="back-title"><span>2016 全国攀岩分站赛（第一站）- 广西.乐业（L,B,S）</span></p>
-                        <p class="back-date">42:25</p>
+                        <p class="back-date none">42:25</p>
                         <span class="back-arrow"></span>
                         <span class="back-yellow"></span>
                     </a>
                 </li>
                 <li class="col-xs-12 col-sm-6 col-md-3">
                     <a href="javascript:;">
-                        <img src="img/back-pic.jpg" class="back-pic" alt=""/>
+                        <div class="back-pic">
+                            <video src="movie.ogg" width="100%" height="100%" controls preload></video>
+                        </div>
                         <p class="back-title"><span>2016 全国攀岩分站赛（第一站）- 广西.乐业（L,B,S）</span></p>
-                        <p class="back-date">42:25</p>
+                        <p class="back-date none">42:25</p>
                         <span class="back-arrow"></span>
                         <span class="back-yellow"></span>
                     </a>
                 </li>
                 <li class="col-xs-12 col-sm-6 col-md-3">
                     <a href="javascript:;">
-                        <img src="img/back-pic.jpg" class="back-pic" alt=""/>
+                        <div class="back-pic">
+                            <video src="movie.ogg" width="100%" height="100%" controls preload></video>
+                        </div>
                         <p class="back-title"><span>2016 全国攀岩分站赛（第一站）- 广西.乐业（L,B,S）</span></p>
-                        <p class="back-date">42:25</p>
+                        <p class="back-date none">42:25</p>
                         <span class="back-arrow"></span>
                         <span class="back-yellow"></span>
                     </a>
                 </li>
                 <li class="col-xs-12 col-sm-6 col-md-3">
                     <a href="javascript:;">
-                        <img src="img/back-pic.jpg" class="back-pic" alt=""/>
+                        <div class="back-pic">
+                            <video src="movie.ogg" width="100%" height="100%" controls preload></video>
+                        </div>
                         <p class="back-title"><span>2016 全国攀岩分站赛（第一站）- 广西.乐业（L,B,S）</span></p>
-                        <p class="back-date">42:25</p>
+                        <p class="back-date none">42:25</p>
                         <span class="back-arrow"></span>
                         <span class="back-yellow"></span>
                     </a>
                 </li>
                 <li class="col-xs-12 col-sm-6 col-md-3">
                     <a href="javascript:;">
-                        <img src="img/back-pic.jpg" class="back-pic" alt=""/>
+                        <div class="back-pic">
+                            <video src="movie.ogg" width="100%" height="100%" controls preload></video>
+                        </div>
                         <p class="back-title"><span>2016 全国攀岩分站赛（第一站）- 广西.乐业（L,B,S）</span></p>
-                        <p class="back-date">42:25</p>
+                        <p class="back-date none">42:25</p>
                         <span class="back-arrow"></span>
                         <span class="back-yellow"></span>
                     </a>
                 </li>
                 <li class="col-xs-12 col-sm-6 col-md-3">
                     <a href="javascript:;">
-                        <img src="img/back-pic.jpg" class="back-pic" alt=""/>
+                        <div class="back-pic">
+                            <video src="movie.ogg" width="100%" height="100%" controls preload></video>
+                        </div>
                         <p class="back-title"><span>2016 全国攀岩分站赛（第一站）- 广西.乐业（L,B,S）</span></p>
-                        <p class="back-date">42:25</p>
+                        <p class="back-date none">42:25</p>
                         <span class="back-arrow"></span>
                         <span class="back-yellow"></span>
                     </a>
                 </li>
                 <li class="col-xs-12 col-sm-6 col-md-3">
                     <a href="javascript:;">
-                        <img src="img/back-pic.jpg" class="back-pic" alt=""/>
+                        <div class="back-pic">
+                            <video src="movie.ogg" width="100%" height="100%" controls preload></video>
+                        </div>
                         <p class="back-title"><span>2016 全国攀岩分站赛（第一站）- 广西.乐业（L,B,S）</span></p>
-                        <p class="back-date">42:25</p>
+                        <p class="back-date none">42:25</p>
                         <span class="back-arrow"></span>
                         <span class="back-yellow"></span>
                     </a>
                 </li>
                 <li class="col-xs-12 col-sm-6 col-md-3">
                     <a href="javascript:;">
-                        <img src="img/back-pic.jpg" class="back-pic" alt=""/>
+                        <div class="back-pic">
+                            <video src="movie.ogg" width="100%" height="100%" controls preload></video>
+                        </div>
                         <p class="back-title"><span>2016 全国攀岩分站赛（第一站）- 广西.乐业（L,B,S）</span></p>
-                        <p class="back-date">42:25</p>
+                        <p class="back-date none">42:25</p>
                         <span class="back-arrow"></span>
                         <span class="back-yellow"></span>
                     </a>
                 </li>
                 <li class="col-xs-12 col-sm-6 col-md-3">
                     <a href="javascript:;">
-                        <img src="img/back-pic.jpg" class="back-pic" alt=""/>
+                        <div class="back-pic">
+                            <video src="movie.ogg" width="100%" height="100%" controls preload></video>
+                        </div>
                         <p class="back-title"><span>2016 全国攀岩分站赛（第一站）- 广西.乐业（L,B,S）</span></p>
-                        <p class="back-date">42:25</p>
+                        <p class="back-date none">42:25</p>
                         <span class="back-arrow"></span>
                         <span class="back-yellow"></span>
                     </a>
                 </li>
                 <li class="col-xs-12 col-sm-6 col-md-3">
                     <a href="javascript:;">
-                        <img src="img/back-pic.jpg" class="back-pic" alt=""/>
+                        <div class="back-pic">
+                            <video src="movie.ogg" width="100%" height="100%" controls preload></video>
+                        </div>
                         <p class="back-title"><span>2016 全国攀岩分站赛（第一站）- 广西.乐业（L,B,S）</span></p>
-                        <p class="back-date">42:25</p>
+                        <p class="back-date none">42:25</p>
                         <span class="back-arrow"></span>
                         <span class="back-yellow"></span>
                     </a>
                 </li>
                 <li class="col-xs-12 col-sm-6 col-md-3">
                     <a href="javascript:;">
-                        <img src="img/back-pic.jpg" class="back-pic" alt=""/>
+                        <div class="back-pic">
+                            <video src="movie.ogg" width="100%" height="100%" controls preload></video>
+                        </div>
                         <p class="back-title"><span>2016 全国攀岩分站赛（第一站）- 广西.乐业（L,B,S）</span></p>
-                        <p class="back-date">42:25</p>
+                        <p class="back-date none">42:25</p>
                         <span class="back-arrow"></span>
                         <span class="back-yellow"></span>
                     </a>
